force-app/main/default/objects/Office__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County of the BOFE/Wage office</description>
    <label>County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>