force-app/main/default/objects/Office__c/fields/Office_Account__c.field-meta.xml
<CustomField>
    <fullName>Office_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Account</label>
    <referenceTo>Office_Account__c</referenceTo>
    <relationshipLabel>Offices</relationshipLabel>
    <relationshipName>Offices</relationshipName>
    <type>Lookup</type>
</CustomField>