force-app/main/default/objects/Office__c/fields/Office_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Formula__c</fullName>
    <formula>Address_1__c 
&amp; IF(ISBLANK(Address_2__c), &quot;, &quot;, &quot; &quot; &amp; Address_2__c &amp; &quot;, &quot;) 
&amp; City__c
&amp; &quot;, &quot; &amp;  State__c 
&amp; &quot;  &quot; &amp;  Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Address Formula</label>
    <type>Text</type>
</CustomField>