force-app/main/default/objects/Office__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <description>Used for a Flow in order to Map the BOFE Office for WCA Wage Referrals</description>
    <inlineHelpText>Used for a Flow in order to Map the BOFE Office for WCA Wage Referrals</inlineHelpText>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>El Centro</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Long Beach</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Oakland</fullName>
            </value>
            <value>
                <fullName>Redding</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>Salinas</fullName>
            </value>
            <value>
                <fullName>San Bernardino</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>Santa Ana</fullName>
            </value>
            <value>
                <fullName>Santa Barbara</fullName>
            </value>
            <value>
                <fullName>Santa Rosa</fullName>
            </value>
            <value>
                <fullName>Stockton</fullName>
            </value>
            <value>
                <fullName>Van Nuys</fullName>
            </value>
            <value>
                <fullName>Riverside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>