force-app/main/default/objects/Office__c/fields/Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Office_Number__c</fullName>
    <description>Office number. Used for Cashiering and the Office Account object</description>
    <label>Office Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>