force-app/main/default/objects/Office__c/fields/SDBX_Owner_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>SDBX_Owner_Queue_ID__c</fullName>
    <description>Used to hold the unique Sandbox (CS11): Office Queue ID for CS11 of BOFE offices.
For BOFE Offices: Setup -&gt; Manage Users -&gt; Queues -&gt; Select: Office-Name -&gt; ID
For WCA offices, set to any user&#39;s ID from sandbox.</description>
    <label>SDBX Owner-Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>