force-app/main/default/objects/Office__c/recordTypes/City_Business_License.recordType-meta.xml
<RecordType>
    <fullName>City_Business_License</fullName>
    <active>true</active>
    <description>This field is used to link the location where the Employer City Business License information is obtained from</description>
    <label>City Business License</label>
</RecordType>