force-app/main/default/objects/Office__c/recordTypes/County_Registrar.recordType-meta.xml
<RecordType>
    <fullName>County_Registrar</fullName>
    <active>true</active>
    <description>This field is used to link where the Employer business information is obtained from</description>
    <label>County Registrar</label>
</RecordType>