force-app/main/default/objects/Office__c/recordTypes/Courthouse.recordType-meta.xml
<RecordType>
    <fullName>Courthouse</fullName>
    <active>true</active>
    <label>Courthouse</label>
</RecordType>