force-app/main/default/objects/Office__c/recordTypes/DIR_Office.recordType-meta.xml
<RecordType>
    <fullName>DIR_Office</fullName>
    <active>true</active>
    <description>For HR to identify DIR employee&#39;s work location</description>
    <label>DIR Office</label>
</RecordType>