force-app/main/default/objects/Office__c/recordTypes/Legal.recordType-meta.xml
<RecordType>
    <fullName>Legal</fullName>
    <active>true</active>
    <description>Legal Offices</description>
    <label>Legal</label>
</RecordType>