force-app/main/default/objects/Office__c/recordTypes/License_Registration.recordType-meta.xml
<RecordType>
    <fullName>License_Registration</fullName>
    <active>true</active>
    <description>Identify as DLSE license &amp; registration office</description>
    <label>License/Registration</label>
</RecordType>