force-app/main/default/objects/Office__c/recordTypes/WCA.recordType-meta.xml
<RecordType>
    <fullName>WCA</fullName>
    <active>true</active>
    <description>Identifies offices as WAGE</description>
    <label>WCA</label>
</RecordType>