force-app/main/default/objects/Office__c/listViews/Offices_County_Registrar.listView-meta.xml
<ListView>
    <fullName>Offices_County_Registrar</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Address_1__c</columns>
    <columns>Address_2__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>County__c</columns>
    <columns>Phone__c</columns>
    <columns>Fax__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Office__c.County_Registrar</value>
    </filters>
    <label>Offices - County Registrar</label>
</ListView>