force-app/main/default/objects/Office__c/listViews/Offices_Courts.listView-meta.xml
<ListView>
    <fullName>Offices_Courts</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Address_1__c</columns>
    <columns>Address_2__c</columns>
    <columns>City__c</columns>
    <columns>County__c</columns>
    <columns>Phone__c</columns>
    <columns>Fax__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Office__c.Courthouse</value>
    </filters>
    <label>Offices - Courts</label>
</ListView>